# wilq-seo

./: .env.example  .fallowrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  PLANS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.codex/: hooks.json  mcp-notes.md
.githooks/: commit-msg
docs/: CONTEXT.md  PROGRESS.md  current-cleanup-state.md  dashboard-state.md
scripts/: access_pack_check.sh  access_pack_manifest.sh  audit_complexity.py  audit_skill_eval_coverage.py  audit_skill_reviewer_scorecards.py  check_commit_message.py  claim_ledger_gate_audit.py  codex_skill_eval.sh  content_uat_snapshot.py  context_pack_language_guard.py  daily_check_skill_contract.py  dashboard_usefulness_audit.py  eval_action_validation.sh  eval_marketing_brief.sh  export_content_mapping_review_packet.py  export_marketer_uat_packet.py  goal_001_completion_check.py  goal_005_completion_check.py  lint.sh  live_contract_smoke.py  local_stack.sh  marketer_language_guard.py  pre_demo_gate.sh  quality.sh  record_goal_005_content_uat_result.py  record_marketer_uat_result.py  record_service_profile_review_result.py  render_skill_coverage_audit.py  security.sh  skill_hygiene_check.py  skill_smoke_harness.py  skill_tuning_packet.py  social_history_inventory_audit.py  source_fact_coverage_audit.py  test.sh  test_backend_shard.py  typecheck.sh  verify.sh  wilq_stage_snapshot.py
tests/: test_ads_business_context_contracts.py  test_ads_landing_service_binding.py  (+43 more)
(+1204 files in other folders)
